resource_customizations/gateway.networking.k8s.io/HTTPRoute/testdata/degraded_resolved_refs.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-httproute
  namespace: default
spec:
  parentRefs:
  - name: example-gateway
    sectionName: http
  rules:
  - backendRefs:
    - name: service-does-not-exist
      port: 8080
status:
  parents:
  - conditions:
    - lastTransitionTime: "2023-03-02T15:00:00Z"
      message: Route is successfully programmed
      observedGeneration: 1
      reason: Programmed
      status: "True"
      type: Programmed
    - lastTransitionTime: "2023-03-02T15:00:00Z"
      message: Route has been accepted
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2023-03-02T15:00:00Z"
      message: BackendRef service-does-not-exist not found
      observedGeneration: 1
      reason: BackendNotFound
      status: "False"
      type: ResolvedRefs
    controllerName: example.io/gateway-controller
    parentRef:
      name: example-gateway
      namespace: default
      sectionName: http
