resource_customizations/gateway.networking.k8s.io/HTTPRoute/testdata/healthy_empty_parents.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-httproute
  namespace: default
  generation: 1
spec:
  parentRefs:
  - name: example-gateway
    sectionName: http
  rules:
  - backendRefs:
    - name: example-service
      port: 8080
status:
  parents: []
