resource_customizations/gateway.networking.k8s.io/HTTPRoute/testdata/healthy_multiple_generations.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-httproute
  generation: 2
spec:
  parentRefs:
    - kind: Gateway
      name: eg
      namespace: envoy-gateway-system
      sectionName: foo-nonexistent
  hostnames:
    - "example-httproute.example.com"
  rules:
    - backendRefs:
        - name: example-service
          port: 8080
status:
  parents:
    - conditions:
        - lastTransitionTime: "2025-10-14T11:19:41Z"
          message: No listeners match this parent ref
          observedGeneration: 1
          reason: NoMatchingParent
          status: "False"
          type: Accepted
        - lastTransitionTime: "2025-10-14T11:19:41Z"
          message: Resolved all the Object references for the Route
          observedGeneration: 1
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: eg
        namespace: envoy-gateway-system
        sectionName: foo-nonexistent
    - conditions:
        - lastTransitionTime: "2025-10-14T11:25:18Z"
          message: Route is accepted
          observedGeneration: 2
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-10-14T11:25:18Z"
          message: Resolved all the Object references for the Route
          observedGeneration: 2
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: eg
        namespace: envoy-gateway-system
        sectionName: https-net
