resource_customizations/gateway.networking.k8s.io/HTTPRoute/testdata/httproute-degraded-noparents.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http
  namespace: default
spec:
  hostnames:
    - httpbin.example.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway1
      namespace: istio-ingress
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: httpbin
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /get
status:
  parents: []
